# homemate

./: LICENSE  README.md  homemate.cbp  manage.py
autocenter/: CMakeLists.txt  teapot.c
homemate/: settings.py  urls.py  view.py  wsgi.py
mediacenter/: urls.py  views.py
mediacenter/templates/: mediacenter.html
static/css/: imagecrop.css
static/js/: index.js
static/js/bootstrap/: bootstrap.js  bootstrap.min.js
templates/: homepage.html  index.html
